# Kalman

./: .clang-format  .clang-tidy  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE.txt  README.md  SECURITY.md  _c_make_lists_8txt.xhtml  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.xhtml  _c_o_n_t_r_i_b_u_t_i_n_g_8md.xhtml  _i_n_s_t_a_l_l_8md.xhtml  _i_n_s_t_a_l_l_8txt.xhtml  _l_i_c_e_n_s_e_8txt.xhtml  _r_e_a_d_m_e_8md.xhtml  _s_e_c_u_r_i_t_y_8md.xhtml  _unit.xhtml  a.out  algorithm_8hpp.xhtml  algorithm_8hpp__dep__incl.map  algorithm_8hpp__dep__incl.md5  algorithm_8hpp_source.xhtml  annotated.xhtml  annotated_dup.js  ardupilot__soaring_8cpp.js  ardupilot__soaring_8cpp.xhtml  ardupilot__soaring_8cpp__incl.map  ardupilot__soaring_8cpp__incl.md5  ardupilot__soaring_8cpp_source.xhtml  ardupilot_soaring_8cpp-example.xhtml  baseline_8cpp.js  baseline_8cpp.xhtml  baseline_8cpp__incl.map  baseline_8cpp__incl.md5  baseline_8cpp_source.xhtml  benchmark_2_c_make_lists_8txt.xhtml  benchmark_2_r_e_a_d_m_e_8md.xhtml  benchmark_8cpp.js  (+2369 more)
benchmark/: CMakeLists.txt  README.md  baseline.cpp  baseline.plt  benchmark.bat  benchmark.cpp  benchmark_full.cpp  benchmark_simple.cpp  driver.cpp  eigen_predict_x1x.cpp  eigen_update_xx0.cpp  float.plt  float1x1x0.plt  float1x1x1.plt  operator1x1x0.cpp  operator1x1x0.plt  operator1x1x1.cpp  operator1x1x1.plt  plot.cpp  plot.sh  predict.cpp  predict.csv  predict.plt  predict1x1x0.cpp  predict1x1x0.plt  predict1x1x1.cpp  predict1x1x1.plt  predict_1x1x0.cpp  predict_1x1x1.cpp  predict_linalg_x1x.cpp  results.json  size.cpp  size.csv  size.plt  time.cpp  time.csv  time.plt  update.cpp  update.csv  update.plt  (+7 more)
benchmark/include/: benchmark.hpp
benchmark/result/: baseline.json  eigen_predict_10x1x1.json  eigen_predict_10x1x12.json  eigen_predict_10x1x14.json  eigen_predict_10x1x16.json  eigen_predict_10x1x17.json  eigen_predict_10x1x2.json  eigen_predict_10x1x27.json  eigen_predict_10x1x29.json  eigen_predict_10x1x32.json  eigen_predict_10x1x5.json  eigen_predict_10x1x7.json  eigen_predict_11x1x10.json  eigen_predict_11x1x11.json  eigen_predict_11x1x13.json  eigen_predict_11x1x14.json  eigen_predict_11x1x15.json  eigen_predict_11x1x18.json  eigen_predict_11x1x19.json  eigen_predict_11x1x23.json  eigen_predict_11x1x24.json  eigen_predict_11x1x25.json  eigen_predict_11x1x28.json  eigen_predict_11x1x29.json  eigen_predict_11x1x3.json  eigen_predict_11x1x32.json  eigen_predict_11x1x4.json  eigen_predict_11x1x5.json  eigen_predict_11x1x6.json  eigen_predict_11x1x9.json  eigen_predict_12x1x1.json  eigen_predict_12x1x10.json  eigen_predict_12x1x12.json  eigen_predict_12x1x13.json  eigen_predict_12x1x14.json  eigen_predict_12x1x15.json  eigen_predict_12x1x2.json  eigen_predict_12x1x22.json  eigen_predict_12x1x24.json  eigen_predict_12x1x26.json  (+5095 more)
benchmark/script/: baseline.plt  eigen_predict.plt  eigen_update.plt  float.plt  float1x1x0.plt  float1x1x1.plt  float_1x1x0.plt  float_1x1x1.plt  plot.sh  predict1x1x0.plt  predict1x1x1.plt  predict_1x1x0.plt  predict_1x1x1.plt  predict_eigen.plt  predict_lazy.plt  predict_naive.plt  profile.sh  update1x1x0.plt  update1x1x1.plt  update_1x1x0.plt  update_1x1x1.plt  update_eigen.plt  update_lazy.plt  update_naive.plt
include/: CMakeLists.txt
include/fcarouge/: CMakeLists.txt  algorithm.hpp  eigen.hpp  filter.hpp  format.hpp  kalman.hpp  kalman_eigen.hpp  kalman_eigen_operator.hpp  kalman_equation.hpp  kalman_forward.hpp  kalman_operator.hpp  kalman_operator_eigen.hpp  predict.hpp  printer.hpp  update.hpp  utility.hpp  view.hpp
sample/: CMakeLists.txt  ab_gold_weight_unit.cpp  apollo.cpp  ardupilot_soaring.cpp  building_height.cpp  dog_position.cpp  dog_position1d.cpp  dog_position2d.cpp  ekf_4x1x0_ardupilot_soaring.cpp  ekf_4x1x0_soaring.cpp  ekf_4x1x0_thermal_soaring.cpp  ekf_6x4x0_3d_apollo_position.cpp  ekf_6x4x0_apollo.cpp  eskf_15x6x6_sins_imu_gnns_mag.cpp  eskf_15x6x6_sins_imu_gnns_mag_1.cpp  eskf_15x6x6_sins_imu_gnns_mag_original.cpp  eskf_2x1x0_1d_vehicle_position.cpp  falling_package.cpp  global_positioning.cpp  inertial_navigation.cpp  kf_1x1x0_building_height.cpp  kf_1x1x0_building_height_unit.cpp  kf_1x1x0_liquid_temperature.cpp  kf_1x1x0_liquid_temperature_unit.cpp  kf_1x1x1_1d_dog_position.cpp  kf_1x1x1_1d_dog_position_unit.cpp  kf_1x1x1_dog_position.cpp  kf_1x1x1_dog_position_unit.cpp  kf_2x1x1_1d_rocket_altitude.cpp  kf_2x1x1_rocket_altitude.cpp  kf_6x2x0_2d_vehicle_position.cpp  kf_6x2x0_2d_vehicle_position_unit.cpp  kf_6x2x0_vehicle_location.cpp  kf_6x2x0_vehicle_location_unit.cpp  kf_8x4x0_2d_bounding_box.cpp  kf_8x4x0_deep_sort_bounding_box.cpp  kf_video.cpp  liquid_temperature.cpp  localization.cpp  plotter.hpp  (+8 more)
sample/data/: kf_8x4x0_deep_sort_bounding_box.csv
support/: CMakeLists.txt  format  generator  print  std.ixx  support.cmake
test/: CMakeLists.txt  eigen_f.cpp  eigen_format.cpp  eigen_h.cpp  eigen_initialization.cpp  eigen_pipe.cpp  f.cpp  format.cpp  h.cpp  initialization.cpp  kalman_assign_copy_5x4x3.cpp  kalman_assign_move_5x4x3.cpp  kalman_constructor_copy_5x4x3.cpp  kalman_constructor_declarative_5x4x3.cpp  kalman_constructor_default.cpp  kalman_constructor_default_1x1x3.cpp  kalman_constructor_default_1x4x1.cpp  kalman_constructor_default_1x4x3.cpp  kalman_constructor_default_5x1x1.cpp  kalman_constructor_default_5x1x3.cpp  kalman_constructor_default_5x4x0.cpp  kalman_constructor_default_5x4x1.cpp  kalman_constructor_default_5x4x3.cpp  kalman_constructor_default_5x4x3_constexpr.cpp  kalman_constructor_default_constexpr.cpp  kalman_constructor_default_eigen_1x1x3.cpp  kalman_constructor_default_eigen_1x4x1.cpp  kalman_constructor_default_eigen_1x4x3.cpp  kalman_constructor_default_eigen_5x1x1.cpp  kalman_constructor_default_eigen_5x1x3.cpp  kalman_constructor_default_eigen_5x4x0.cpp  kalman_constructor_default_eigen_5x4x1.cpp  kalman_constructor_default_eigen_5x4x3.cpp  kalman_constructor_default_float_1x1x1.cpp  kalman_constructor_models.cpp  kalman_constructor_move_5x4x3.cpp  kalman_f.cpp  kalman_f_5x4x3.cpp  kalman_f_eigen_5x4x3.cpp  kalman_format.cpp  (+76 more)
(+971 files in other folders)
